# ers

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  pyproject.toml  setup.py
ers_cli/: CMakeLists.txt  main.cpp
ers_python/: CMakeLists.txt  ers_wrapper.cpp  ers_wrapper.h
include/: erc_wrapper.h
lib_ers/: CMakeLists.txt  README.txt  Tools.h
src/: bindings.cpp  erc_wrapper.cpp
