[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11", "numpy", "opencv-python"]
build-backend = "scikit_build_core.build"

[project]
name = "ers"
version = "0.1.0"
description = "Python bindings for Entropy Rate Superpixel segmentation"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.7"

[tool.scikit-build]
cmake.minimum-version = "3.14"
wheel.packages = ["src"]